<resources>
    <string name="app_name">lancaster.app</string>
    <string name="tv1">BIENVENIDO</string>

    <string name="title_activity_main2">MainActivity2</string>
    <string name="LoginText">Inicio de Sesión</string>
    <string name="btn1">INGRESO FAMILIAS</string>
    <string name="btn2">INGRESO EDUCADORES</string>
    <string name="userEmail">Ingrese su usuario</string>
    <string name="userPass">Ingrese su contraseña</string>
    <string name="reservado">Todos los derechos reservados</string>
    <string name="saludo">Hola!</string>
    <string name="username">Patricia</string>
    <string name="adminname">Arlin</string>
    <string name="logoname">Colegio Lancaster</string>
    <string name="registername">Registro</string>
    <string name="Buscar">Buscar...</string>
    <string name="Semanadeexamenes">Semana de examenes</string>
    <string name="Recordatorio">Recordatorio</string>

    //Descriptions
    <string name="profilephoto">photo-profile</string>
    <string name="LogoutButton">Logout-Btn</string>
    <string name="MessageIcon">Message-Icon</string>
    <string name="MessageText">Message-Text</string>
    <string name="Icons">icon</string>
    <string name="Text">Text</string>

    //strings formulario registro
    <string name="nameregister">Nombre</string>
    <string name="lastnameregister">Apellido</string>
    <string name="emailregister">Escribe tu email</string>
    <string name="passregister">Escribe una contraseña</string>
    <string name="btnregister">Registrarse</string>
    <string name="loginClick">Haz click para loguearte</string>
    <string name="registerClick"> Haz click para Registrarte</string>
    <string name="asistencia">Asistencia</string>
    <string name="mensajes">Mensajes</string>
    <string name="horario">Horario</string>
    <string name="calificaciones">Calificaciones</string>
    <string name="asignaturas">Asignaturas</string>
    <string name="ver_m_s">Ver más</string>
    <string name="matem_ticas">Matemáticas</string>
    <string name="_3_5">3.5</string>
    <string name="ciencias">Ciencias</string>
    <string name="_4_3">4.3</string>
    <string name="buscar">Buscar...</string>
    <string name="recordatorio">Recordatorio</string>
    <string name="semana_de_examenes">Semana de examenes</string>
    <string name="observador">Observador</string>
    <string name="filosofia">Filosofia</string>
    <string name="ingl_s">Inglés</string>
    <string name="logo">logo</string>
    <string name="mis_calificaciones">Mis calificaciones</string>
    <string name="periodo">Periodo</string>
    <string name="_1_periodo">1° Periodo</string>
    <string name="_2_periodo">2° Periodo</string>
    <string name="_3_periodo">3° Periodo</string>
    <string name="_4_8">4.8</string>
    <string name="_4_0">4.0</string>
    <string name="espa_ol">Español</string>
    <string name="_3_8">3.8</string>
    <string name="naturales">Naturales</string>
    <string name="edu_fisica">Edu. Fisica</string>
    <string name="_4_5">4.5</string>
    <string name="notas" >Notas</string>
</resources>