<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="133dp"
        android:layout_height="130dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/logoname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logocolegio" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="250dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/emailregister"
        android:inputType="textEmailAddress"
        android:textColor="#9C9C9D"
        android:textColorHint="#686464"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="80dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/passregister"
        android:inputType="textPassword"
        android:textColor="#9C9C9D"
        android:textColorHint="#686464"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/educadoresLogin"
        app:layout_constraintStart_toStartOf="parent" />



    <Button
        android:id="@+id/educadoresLogin"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="120dp"
        android:gravity="center"
        android:onClick="siguiente2"
        android:text="@string/btn2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FamiliasLogin" />

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="120dp"
        android:text="@string/LoginText"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/FamiliasLogin"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="120dp"
        android:gravity="center"
        android:onClick="siguiente1"
        android:text="@string/btn1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/registerNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:gravity="center"
        android:text="@string/loginClick"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>